# lines

./: Cargo.toml  README.md
.github/workflows/: release.yml
examples/Scripts/: update.md
examples/Servers/: web.md
examples/Synology/: dsmview.md
src/: app.rs  commands.rs  config.rs  custom.rs  events.rs  logger.rs  main.rs  parser.rs  ui.rs
tests/: load_examples.rs
